c2prj1_cards/grade.txt
Grading at Sat Sep 21 17:13:12 UTC 2019
Compiling cards.c
cards.c: In function ‘print_card’:
cards.c:104:10: error: multi-character character constant [-Werror=multichar]
   printf('%c', value); 
          ^
cards.c:104:10: error: passing argument 1 of ‘printf’ makes pointer from integer without a cast [-Werror=int-conversion]
In file included from cards.c:1:0:
/usr/include/stdio.h:362:12: note: expected ‘const char * restrict’ but argument is of type ‘int’
 extern int printf (const char *__restrict __format, ...);
            ^
cards.c:106:10: error: multi-character character constant [-Werror=multichar]
   printf('%c', suit);
          ^
cards.c:106:10: error: passing argument 1 of ‘printf’ makes pointer from integer without a cast [-Werror=int-conversion]
In file included from cards.c:1:0:
/usr/include/stdio.h:362:12: note: expected ‘const char * restrict’ but argument is of type ‘int’
 extern int printf (const char *__restrict __format, ...);
            ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
